2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Fix duration query.
	Don't seek if there's no available content.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* .gitignore:
	* bin/.gitignore:
	* pitivi/.gitignore:
	* pitivi/elements/.gitignore:
	* pitivi/pixmaps/.gitignore:
	* pitivi/ui/.gitignore:
	* po/.gitignore:
	* tests/.gitignore:
	Rename .cvsignore to .gitignore because we are no longer using CVS but
	more and more people are using GIT.
	This doesn't affect people using svn.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/objectfactory.py:
	* pitivi/stream.py:
	* pitivi/Makefile.am:
	Use python properties.
	Move MultimediaStream to separate module.
	Comments and cleanups.
	* pitivi/discoverer.py:
	Update code for modifications in objectfactory

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* bin/pitivi.in:
	Cleanups

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/pitivi.py:
	Remove dependency on gtk
	Make subclass for Interactive pitivi
	Use pure python properties
	Clean up code and add comments
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/mainwindow.py:
	* tests/test_basic.py:
	* tests/test_file_load_save.py:
	Adapt code for modifications in pitivi.py

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/source.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/viewer.py:
	* tests/common.py:
	Convert pitivi,bin,discoverer,objectfactory to gobject-less signaling
	and properties.
	Modify all code using that accordingly.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* docs/HACKING:
	Added notes about public/private/protected attributes

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>
